        is compiled in the project or a dependent static library (without -betterC)
      - Issue 18640: settings now default to mago debug engine (avoiding deprecation warning)
      - to use LDC with in VS2017, set "InstallationFolder" in registry HKEY_LOCAL_MACHINE\Software\LDC
      - now demangles linker errors (if not disabled on global options page)
    - new project wizard for customizing generated projects, with only two types to select from
    - new icons for project templates based on vcxproj
    - support option -gf (emit debug information for referenced types)
  * mago:
    - hex values now lower case for consistency with C++ debugger
    - no longer shows void pointers as expandable
    - show vtable of classes and interfaces as __vfptr (also allowed in watches, enable/disable 
      on Tools->Options->Debugging-Mago page, not with LDC)
    - shows symbol names for pointers if found in image
    - pointers: also show value for pointee, remove additional indirection for complex types
    - support to call functions and delegates without arguments from watch window
      (dmd win64 only, no slice or delegate return values)
    - can now show the dynamic type of an interface
  * miscellaneous
    - Issue 18622: removed outdated information regarding link definition when generated by Visual D DLL project.

unreleased Version 0.48.0

  * fixed uninstallation for VS2017
  * installation for VS2013+ now uses PackageManifest format instead of Vsix
  * restore project templates for VS2008, new project wizard doesn't work there'
  * new mixed D/C++ VC project: optionally adding main in C++, setup precompiled headers
  * avoid error message regarding altered assemblies with same version
  * fix default library path if UCRT has different  version than SDK
  * fix help via F1 fo dmd 2.072+
  * show detected compiler version below installation path
  * fix installation of the D icon for the solution explorer