@@ -1475,6 +1475,7 @@ class Source : DisposingComObject, IVsUserDataEvents, IVsTextLinesEvents, IVsTex
 				mLineChanges ~= chg;
 			}
 		}
+		VerifyLineBreaks(pTextLineChange.iStartLine, pTextLineChange.iNewEndLine);
 		if(mOutlining)
 			CheckOutlining(pTextLineChange);
 		return mColorizer.OnLinesChanged(pTextLineChange.iStartLine, pTextLineChange.iOldEndLine, pTextLineChange.iNewEndLine, fLast != 0);
@@ -2997,6 +2998,35 @@ else
 				return rc;
 		}
 		return S_OK;
+	}
+
+	int VerifyLineBreaks(int iStartLine, int iNewEndLine)
+	{
+		if(iStartLine >= iNewEndLine) // only insertions
+			return S_FALSE;
+
+		int rc = S_FALSE; // S_OK if modification
+		int refline = (iStartLine > 0 ? iStartLine - 1 : iNewEndLine + 1);
+		if (refline < GetLineCount())
+		{
+			string refnl = GetLineBreakText(mBuffer, refline);
+			wstring wrefnl = to!wstring(refnl);
+			for (int ln = iStartLine; ln <= iNewEndLine; ln++)
+			{
+				string nl = GetLineBreakText(mBuffer, ln);
+				if (nl != refnl)
+				{
+					wstring text = GetText(ln, 0, ln + 1, 0);
+					if (text.endsWith(nl))
+					{
+						text = text[0..$-nl.length] ~ wrefnl;
+						TextSpan changedSpan;
+						rc = mBuffer.ReplaceLines(ln, 0, ln + 1, 0, text.ptr, text.length, &changedSpan);
+					}
+				}
+			}
+		}
+		return rc;
 	}
 
 	////////////////////////////////////////////////////////////////////////
